Update palette in quickwindow when binding palette changes

The palette in quickwindow doesn't update to the change in the binding
palette (for instance, if any of the color roles changes in the binding
palette, the changed  color from the same color role has not been
reflected in the window palette). This patch connects the changed
signal from the binding palette to the window palette and whenever the
changed() signal is triggered, the binding palette will be once again
set to the window palette. 

Fixes: QTBUG-121388
Pick-to: 6.5
Change-Id: I9b837fe6c1213798b0681e5f92c17172a6cde4b9
Reviewed-by: Oliver Eftevaag <oliver.eftevaag@qt.io>
(cherry picked from commit 95637da9a7e74d0488ec7b2f52e35cfccd927dc8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit b89b831248654a834bb80151344c8ef1f70ba60a)